--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 
 		<nav id="menu">
 			<div class="container">
+				<div id="logo">
+					<img src="assets/img/tp-logo-h.svg" alt="logo Amatista">
+				</div>
 				<ul id="menuBox" class="onlyDesktop">
 					<a href="#inicio">
 						<li>Inicio</li>
@@ -117,9 +120,8 @@
 
 
 
-		<main>
-
-
+		<main id="mainGlobal">
+			
 		</main>
 		
 
